[gd_scene load_steps=10 format=2]

[ext_resource path="res://Character/Assets/structural_hitch.png" type="Texture" id=1]
[ext_resource path="res://Character/Assets/structural_strut.png" type="Texture" id=2]
[ext_resource path="res://Character/Assets/wheel.png" type="Texture" id=3]
[ext_resource path="res://Character/Assets/structural_basket.png" type="Texture" id=4]
[ext_resource path="res://Character/Scripts/Trailer.gd" type="Script" id=5]
[ext_resource path="res://Character/Scripts/TrailerHitch.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 40.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 76, 7 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 7 )

[node name="Trailer" type="Node2D"]
position = Vector2( 180, 46 )
script = ExtResource( 5 )

[node name="TrailerWheel" type="RigidBody2D" parent="."]
position = Vector2( 0, 5 )
collision_layer = 16
collision_mask = 6

[node name="Sprite" type="Sprite" parent="TrailerWheel"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrailerWheel"]
shape = SubResource( 1 )

[node name="PinJoint2D" type="PinJoint2D" parent="TrailerWheel"]
node_a = NodePath("..")
node_b = NodePath("../../TrailerFrame")
softness = 0.01

[node name="TrailerFrame" type="RigidBody2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="Sprite" type="Sprite" parent="TrailerFrame"]
position = Vector2( 10, -7 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrailerFrame"]
position = Vector2( 8, -6 )
shape = SubResource( 2 )

[node name="TrailerHitch" type="RigidBody2D" parent="."]
position = Vector2( 112, -8 )
collision_layer = 8
collision_mask = 4
gravity_scale = 0.0
angular_damp = 40.0
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="TrailerHitch"]
position = Vector2( -13, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrailerHitch"]
position = Vector2( -13, 0.5 )
shape = SubResource( 3 )

[node name="PinJoint2D" type="PinJoint2D" parent="TrailerHitch"]
position = Vector2( -26.5, 0.5 )
node_a = NodePath("../../TrailerFrame")
node_b = NodePath("..")

[node name="TrailerBasket" type="RigidBody2D" parent="."]
collision_layer = 8
collision_mask = 14
angular_damp = 1.0

[node name="Sprite" type="Sprite" parent="TrailerBasket"]
position = Vector2( 0.5, -92 )
texture = ExtResource( 4 )

[node name="PinJoint2D" type="PinJoint2D" parent="TrailerBasket"]
position = Vector2( 0, -20 )
node_a = NodePath("../../TrailerFrame")
node_b = NodePath("..")
disable_collision = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TrailerBasket"]
polygon = PoolVector2Array( 0, -35, 25, -35, 72, -58, 67, -110, 73, -110, 78, -55, 25, -30, -25, -30, -78, -55, -73, -110, -67, -110, -72, -58, -25, -35 )
